@@ -843,38 +843,7 @@ abstract class Installer {
 	 * Environment check for the server hostname.
 	 */
 	protected function envCheckServer() {
-		if ( isset( $_SERVER['HTTPS'] ) && $_SERVER['HTTPS'] == 'on') {
-			$proto = 'https';
-			$stdPort = 443;
-		} else {
-			$proto = 'http';
-			$stdPort = 80;
-		}
-
-		$varNames = array( 'HTTP_HOST', 'SERVER_NAME', 'HOSTNAME', 'SERVER_ADDR' );
-		$host = 'localhost';
-		$port = $stdPort;
-		foreach ( $varNames as $varName ) {
-			if ( !isset( $_SERVER[$varName] ) ) {
-				continue;
-			}
-			$parts = IP::splitHostAndPort( $_SERVER[$varName] );
-			if ( !$parts ) {
-				// Invalid, do not use
-				continue;
-			}
-			$host = $parts[0];
-			if ( $parts[1] === false ) {
-				if ( isset( $_SERVER['SERVER_PORT'] ) ) {
-					$port = $_SERVER['SERVER_PORT'];
-				} // else leave it as $stdPort
-			} else {
-				$port = $parts[1];
-			}
-			break;
-		}
-
-		$server = $proto . '://' . IP::combineHostAndPort( $host, $port, $stdPort );
+		$server = WebRequest::detectServer();
 		$this->showMessage( 'config-using-server', $server );
 		$this->setVar( 'wgServer', $server );
 	}
